--- a/README.mkd
+++ b/README.mkd
@@ -11,31 +11,54 @@ Triangle ![t(p^a,p^b,p^c)](https://latex.codecogs.com/svg.latex?t(p^a,p^b,p^c)) 
 
 Crossed Square Fractal ![cs_{n}\big(p^a,p^b\big)](https://latex.codecogs.com/svg.latex?cs_{n}\big(p^a,p^b\big)) of iteration ![n](https://latex.codecogs.com/svg.latex?n) is a matrix ![{2^{n-1}}\times{2^{n-1}}](https://latex.codecogs.com/svg.latex?{2^{n-1}}\times{2^{n-1}}) of Crossed Squares for total of ![{2^{n-1}}^2](https://latex.codecogs.com/svg.latex?{2^{n-1}}^2) Crossed Squares.
 
+<table>
+  <tr>
+    <td>n</td>
+    <td>1</td>
+    <td>2</td>
+    <td>3</td>
+    <td>4</td>
+    <td>5</td>
+    <td>6</td>
+    <td>7</td>
+    <td>8</td>
+  </tr>
+  <tr>
+    <td>image</td>
+    <td><img src="data/CrossedSquare0_table_1.svg" width="128" height="128"/></td>
+    <td><img src="data/CrossedSquare0_table_2.svg" width="128" height="128"/></td>
+    <td><img src="data/CrossedSquare0_table_3.svg" width="128" height="128"/></td>
+    <td><img src="data/CrossedSquare0_table_4.svg" width="128" height="128"/></td>
+    <td><img src="data/CrossedSquare0_table_5.svg" width="128" height="128"/></td>
+    <td><img src="data/CrossedSquare0_table_6.svg" width="128" height="128"/></td>
+    <td><img src="data/CrossedSquare0_table_7.svg" width="128" height="128"/></td>
+    <td><img src="data/CrossedSquare0_table_8.svg" width="128" height="128"/></td>
+  </tr>
+</table>
 
 ## Crossed Square 0
 
 ![x=\frac{-b\pm\sqrt{b^2-4ac}}{2a}](https://latex.codecogs.com/svg.latex?x=\frac{-b\pm\sqrt{b^2-4ac}}{2a})
 
-<img src="data/a_CrossedSquare0_4.gif" width="250" height="250"/>
+<img src="data/a_CrossedSquare0_4.gif" width="256" height="256"/>
 
-![image size](data/a_CrossedSquare0_4.gif)
 
 ## Crossed Square 1
-![Alt Text](data/a_CrossedSquare1_4.gif)
+<img src="data/a_CrossedSquare1_4.gif" width="256" height="256"/>
 
 ## Crossed Square 2
-![Alt Text](data/a_CrossedSquare2_4.gif)
+<img src="data/a_CrossedSquare2_4.gif" width="256" height="256"/>
 
 ## Crossed Square 3
-![Alt Text](data/a_CrossedSquare3_4.gif)
+<img src="data/a_CrossedSquare3_4.gif" width="256" height="256"/>
 
 ## Crossed Square 4
-![Alt Text](data/a_CrossedSquare4_4.gif)
+<img src="data/a_CrossedSquare4_4.gif" width="256" height="256"/>
 
 ## Crossed Square 5
-![Alt Text](data/a_CrossedSquare5_4.gif)
+<img src="data/a_CrossedSquare5_4.gif" width="256" height="256"/>
 
 
 ## Critic
 
-It is fractal, is not it?
+It is fractal, isn't it?
